changed inter find-a-job page link to blue
on this site blue represents PO, green represents YCPO.
the link in the site wide nav to the PO leg is blue,
it follows that the link to the PO find a job page should also be blue.

--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -389,7 +389,7 @@
       cursor: pointer
 
   &__job-list-message
-    background-color: rgba($color-main, 0.2)
+    background-color: rgba($color-1, 0.1)
     display: none
     font-weight: 700
     padding: $common-spacing * 1.5
