moved site-wide-header sass code to its own file

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -170,13 +170,14 @@ hr
   margin-top: auto
 
 @import 'components/accordion'
+@import 'components/find-a-job'
 @import 'components/footer'
 @import 'components/header'
 @import 'components/job-summary'
 @import 'components/mobile-nav'
 @import 'components/nav-block'
 @import 'components/quote'
-@import 'components/find-a-job'
+@import 'components/site-wide-nav'
 @import 'components/text-block'
 @import 'components/video-player'
 
