--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -174,6 +174,7 @@ hr
 @import 'components/footer'
 @import 'components/header'
 @import 'components/job-summary'
+@import 'components/leg-specific-nav'
 @import 'components/mobile-nav'
 @import 'components/nav-block'
 @import 'components/quote'
