--- a/web/app/themes/ppj/src/sass/components/mobile-nav.sass
+++ b/web/app/themes/ppj/src/sass/components/mobile-nav.sass
@@ -28,7 +28,7 @@ $mobileNavWidthPortrait: 48rem
     transition: opacity $main-transition-duration ease
     z-index: 3
 
-  .nav-menu-is-open &
+  .mobile-nav-is-open &
     border-left-width: .1rem
     height: 100vh
     overflow-y: auto
@@ -127,7 +127,7 @@ $mobileNavWidthPortrait: 48rem
 #site-container
   transition: transform $main-transition-duration
 
-  .nav-menu-is-open &
+  .mobile-nav-is-open &
     transform: translate3D(-$mobileNavWidth,0,0)
 
     @include bp('portrait')
@@ -148,13 +148,13 @@ $mobileNavWidthPortrait: 48rem
     transition: opacity $main-transition-duration ease 0s, z-index 0s $main-transition-duration
     z-index: -1
 
-  .nav-menu-is-open &
+  .mobile-nav-is-open &
 
     &__overlay
       opacity: 1
       transition: opacity $main-transition-duration ease
       z-index: 4
 
-.nav-menu-is-open
+.mobile-nav-is-open
   height: 100vh
   overflow-y: hidden
