--- a/web/app/themes/ppj/src/sass/components/site-wide-nav.sass
+++ b/web/app/themes/ppj/src/sass/components/site-wide-nav.sass
@@ -1,15 +1,22 @@
 .site-wide-nav
-  background: $color-dark
+  align-items: center
+  background-color: $color-main
+  display: flex
+  justify-content: flex-end
+  padding: 0 $common-spacing
 
   @include bp('landscape')
+    background-color: $color-dark
     border-bottom: .2rem solid $color-white
+    display: block
 
   &__menu-list
     display: flex
-    margin: 0 auto
+    justify-content: flex-end
     max-width: 100%
 
     @include bp('landscape')
+      margin: 0 auto
       max-width: 84rem
       padding: 0 $common-spacing * 2
 
@@ -72,6 +79,7 @@
     border-radius: $common-spacing * 2
     color: $color-white
     cursor: pointer
+    font-size: 1.8rem
     font-weight: $font-weight-bold
     height: 3.6rem
     line-height: 2.1rem
