fixed mobile nav for landing page not showing
refactored the mobile nav menu, so that it is now composed of two sections:
the primary section at the top, and the secondary section at the bottom.

On legs, the primary section will display the leg nav menu,
whereas on the landing page, the primary section will display the site wide nav menu.

On legs, the secondary section will display the site wide nav menu.

--- a/web/app/themes/ppj/src/sass/components/mobile-nav.sass
+++ b/web/app/themes/ppj/src/sass/components/mobile-nav.sass
@@ -85,7 +85,7 @@ $mobileNavWidthPortrait: 48rem
     display: flex
     flex-direction: column
 
-    &--site-wide
+    &--secondary
       border-top: $border
       margin-top: 5.1rem
 
@@ -117,11 +117,11 @@ $mobileNavWidthPortrait: 48rem
     padding: $common-spacing $common-spacing * 2
     text-transform: uppercase
 
-    .mobile-nav__menu-list--site-wide &
+    .mobile-nav__menu-list--secondary &
       color: $color-light
       padding-left: $common-spacing * 2
 
-    .mobile-nav__menu-list--site-wide .mobile-nav__menu-list-element:first-child &
+    .mobile-nav__menu-list--secondary .mobile-nav__menu-list-element:first-child &
       padding-left: $common-spacing
 
 #site-container
