--- a/web/app/themes/ppj/src/sass/components/leg-specific-nav.sass
+++ b/web/app/themes/ppj/src/sass/components/leg-specific-nav.sass
@@ -32,16 +32,20 @@
     background-position: center center
     background-size: contain
     display: block
-    height: 4rem // 2.35 ratio
     width: 9.4rem
+    flex: 0 0 9.4rem
+    width: 9.4rem // 2.35 ratio
     pointer-events: auto
 
     .youth-custody &
-      @include background-img('ycs_white_small.png')
+      @include background-img('svg/ycs_logo.svg')
 
     @include bp('portrait')
+      flex: 0 0 15rem
       height: 6.4rem
-      width: 15rem
+
+    @include bp('landscape')
+      width: 14%
 
   &__menu
     background: $color-dark-transparent
@@ -52,12 +56,14 @@
       background-color: $color-transparent
       display: block
       margin-left: auto
+      width: 86%
 
   &__menu-list
     margin-top: 8rem
 
     @include bp('landscape')
       display: flex
+      justify-content: flex-end
       margin-top: 0
       padding-bottom: $common-spacing * 2
 
