refactored main.sass
removed redundant '_' and '.sass' from import sass utilitie file statements;
reorder statements into alphabetical order;
removed old notes in comments;

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -134,14 +134,16 @@ hr
   margin: $common-spacing 0
 
 // utilities
-@import 'utilities/_top-border.sass'
-@import 'utilities/_common-header.sass'
-@import 'utilities/_common-table.sass'
-@import 'utilities/_clearfix.sass'
-@import 'utilities/_margin.sass'
-@import 'utilities/_wire-frame.sass'
-@import 'utilities/_cta-link.sass'
+
+@import 'utilities/clearfix'
+@import 'utilities/common-header'
+@import 'utilities/common-table'
+@import 'utilities/cta-link'
 @import 'utilities/embed'
+@import 'utilities/margin'
+@import 'utilities/top-border'
+@import 'utilities/wire-frame'
+
 
 // -- COMPONENTS ------------------------------------------
 
@@ -183,10 +185,4 @@ hr
   @extend .u-wireframe-image
   height: 9rem
   width: 100%
-// https://www.google.co.uk/search?rlz=1C5CHFA_enGB768GB768&q=css+draw+line+between+elements&oq=css+draw+line+be&gs_l=psy-ab.3.1.0l5j0i22i30k1l5.1752.2140.0.4233.3.3.0.0.0.0.69.169.3.3.0....0...1.1.64.psy-ab..0.3.168....0.sFn_J9E1wJo
-// http://sigmajs.org/
-// https://github.com/musclesoft/jquery-connections
-// https://www.quora.com/What-is-the-best-HTML5-visualization-library-that-can-draw-graphs-nodes-and-edges
-// https://www.w3schools.com/graphics/svg_line.asp
-// https://stackoverflow.com/questions/21864989/draw-lines-between-2-elements-in-html-page
 
