sass utility file top-border come before common-header

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -136,12 +136,13 @@ hr
 // utilities
 
 @import 'utilities/clearfix'
+@import 'utilities/top-border'
 @import 'utilities/common-header'
 @import 'utilities/common-table'
 @import 'utilities/cta-link'
 @import 'utilities/embed'
+@import 'utilities/grid'
 @import 'utilities/margin'
-@import 'utilities/top-border'
 @import 'utilities/wire-frame'
 
 
