--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -32,9 +32,13 @@ $font-size-gigantic: 5.6rem
 $color-main-shadow: darken($color-main, 5%)
 $color-tertiary-light: rgba($color-tertiary, .2)
 
+// horiztonal lengths
 $length-portrait: 768px
 $length-landscape: 1024px
 $length-large: 1440px
+
+// vertical lengths
+$length-regular: 1024px
 
 // layout
 $common-spacing: 1.6rem
