--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -370,11 +370,14 @@
         @include bp('portrait')
           content: ''
           display: block
-          height: $common-spacing * 5
+          height: $common-spacing * 2
           left: 0
           pointer-events: none
           position: absolute
           right: 0
+
+          @include vbp('regular')
+            height: $common-spacing * 3
 
       &:nth-child(2):before
         @include bp('portrait')
