--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -52,19 +52,11 @@
       top: 0
       width: 40%
 
-  &__title
-    @extend .common-header
+  &__prompt
     @include bp('portrait')
+      font-size: $font-size-medium
       margin-bottom: $common-spacing
 
-      &:before
-        display: none
-
-      @include vbp('regular')
-        &:before
-          display: block
-          margin-left: auto
-          margin-right: auto
 
 
   &__prompt
