fixed issue find-a-job page prompt line breaking

--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -52,9 +52,15 @@
       width: 40%
 
   &__prompt
+    font-size: 1.6rem
+    overflow: hidden
+    white-space: nowrap
+
     @include bp('portrait')
-      font-size: $font-size-medium
       margin-bottom: $common-spacing
+
+    @include bp('landscape')
+      font-size: 1.8rem
 
   &__form
     position: relative
