--- a/web/app/themes/ppj/src/sass/components/job-summary.sass
+++ b/web/app/themes/ppj/src/sass/components/job-summary.sass
@@ -26,12 +26,40 @@
   &__content
     background-color: inherit
     position: relative
+    position: relative
+
+  &__row
+    display: flex
+    margin-top: $common-spacing/2
+
+    &:first-child
+      margin-top: 0
 
   &__distance
     height: 1.3em
+    margin-left: $common-spacing/2
+    padding-left: ($common-spacing / 2 + .2rem)
+    position: relative
+
+    &-container
+      height: 1.2em
+      position: relative
 
   &__position
     font-weight: $font-weight-bold
+    &:before
+      content: '|'
+      left: 0
+      position: absolute
+
+  &__prison
+    display: flex
+
+  &__prison-city
+    overflow: hidden
+    padding-right: $common-spacing / 2
+    text-overflow: ellipsis
+    white-space: nowrap
 
   &__salary
     background-color: inherit
@@ -44,8 +72,12 @@
   &__link
     bottom: .7rem
     position: absolute
+    display: block
+    margin-left: auto
+    text-align: right
     text-decoration: underline
     text-transform: capitalize
+    white-space: nowrap
 
   &__prison-name
     font-weight: $font-weight-bold
