made site wide nav font bolder

--- a/web/app/themes/ppj/src/sass/components/site-wide-nav.sass
+++ b/web/app/themes/ppj/src/sass/components/site-wide-nav.sass
@@ -41,7 +41,7 @@
     &-text
       color: $color-light
       font-size: 1.6rem
-      font-weight: $font-weight-semi-bold
+      font-weight: $font-weight-bold
       text-transform: uppercase
       transition: color $main-transition-duration
 
