made leg specific nav link underline more prominent
also moved relevant sass to leg-specific-nav.sass;

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -1,16 +1,3 @@
-.underlined-link
-  &:after
-    border-bottom-color: $color-main
-    border-bottom-style: solid
-    border-bottom-width: .3rem
-    bottom: -.4rem
-    content: ''
-    display: block
-    height: 0
-    opacity: 0
-    position: relative
-    transition: $main-transition-duration
-
 .header
   background-color: $color-quite-dark
   border-bottom: none
@@ -20,7 +7,7 @@
   z-index: 3
 
   &:after
-    $size: .8rem
+    $size: 1rem
     content: ' '
     background-color: $color-tertiary-light
     bottom: -$size
