changed dimensions of header title text top border

--- a/web/app/themes/ppj/src/sass/utilities/_top-border.sass
+++ b/web/app/themes/ppj/src/sass/utilities/_top-border.sass
@@ -28,5 +28,9 @@
       top: -.2rem
       width: 2.4rem
 
+    @if $size == "large"
+      border-top-width: .16em
+      width: 1.4em
+
   @if $size == "small"
     padding-top: .8rem
