--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -164,6 +164,24 @@ hr
   position: relative
   width: 100%
 
+  &__overlay
+    background-color: $color-dark-transparent
+    bottom: 0
+    content: ''
+    cursor: pointer
+    left: 0
+    opacity: 0
+    position: absolute
+    right: 0
+    top: 0
+    transition: opacity $main-transition-duration ease 0s, z-index 0s $main-transition-duration
+    z-index: -1
+
+    &--active
+      opacity: 1
+      transition: opacity $main-transition-duration ease
+      z-index: 4
+
 .page-blocks
 
 .footer
