--- a/web/app/themes/ppj/src/sass/utilities/_cta-link.sass
+++ b/web/app/themes/ppj/src/sass/utilities/_cta-link.sass
@@ -1,6 +1,8 @@
 .cta-link
+  $box-shadow: 0 0 0 .3rem $color-white
+
   border-radius: 5rem
-  box-shadow: 0 0 0 .3rem $color-white;
+  box-shadow: $box-shadow
   color: $color-white
   display: inline-block
   font-size: 1.6rem
@@ -12,6 +14,10 @@
   text-decoration: none
   text-transform: uppercase
   z-index: 1
+
+  &:focus
+    outline: 0
+    box-shadow: $box-shadow, 0 0 0 .6rem Highlight
 
   @include bp('portrait')
     font-size: 2rem
