--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -74,6 +74,7 @@
 
   &__image
     height: 100%
+    object-fit: cover
     opacity: 0
     position: relative
     transition: $main-transition-duration
