--- a/web/app/themes/ppj/src/sass/landing-page.sass
+++ b/web/app/themes/ppj/src/sass/landing-page.sass
@@ -173,6 +173,11 @@ $color-tertiary: $color-dark
       right: 0
       top: 0
 
+    &-link
+      display: block
+      height: 100%
+      width: 100%
+
     &-image
       height: 100%
       width: 100%
