--- a/web/app/themes/ppj/src/sass/components/video-player.sass
+++ b/web/app/themes/ppj/src/sass/components/video-player.sass
@@ -34,6 +34,10 @@
   &__cover
     z-index: 1
 
+    &:hover #{$vp}__play-button,
+    &:focus #{$vp}__play-button
+      width: 22%
+
   &__cover-image
     height: 100%
     width: 100%
@@ -53,13 +57,6 @@
     fill: $color-white
     transition: $main-transition-duration
     width: 20%
-
-    &:hover
-      width: 22%
-
-  &--playing
-    #{$vp}__cover
-      z-index: -1
 
   &--wistia
     padding-bottom: 0
@@ -82,5 +79,3 @@
     .video-player
       &__video-container
         height: 100%
-
-  &--playing
