<img> to background image conversion now based on feature detection.
Instead of replacing <img> tags with background images on ie11,
this is now being performed on any browser that does not support object-fit.

Please see comment on line 5 of main.js for further explanation.

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -9,7 +9,6 @@
 @import '404'
 
 @import 'utilities/top-border'
-@import 'utilities/browser-specific'
 @import 'utilities/clearfix'
 @import 'utilities/common-header'
 @import 'utilities/common-table'
@@ -93,12 +92,11 @@ p
 img
   object-fit: cover
 
-[data-ie-bg-img]
+.object-fit-not-supported [data-bg-img-url]
   background-size: cover
 
-  @include ie11
-    img
-      display: none
+  img
+    display: none
 
 // TODO use this instead :
 // http://vuetips.com/v-cloak-directive-hides-html-on-startup
