--- a/web/app/themes/ppj/src/sass/components/video-player.sass
+++ b/web/app/themes/ppj/src/sass/components/video-player.sass
@@ -39,8 +39,7 @@
       width: 22%
 
   &__cover-image
-    height: 100%
-    object-fit: cover
+    height: auto
     width: 100%
 
   &__play-button-container
