Made images more accessible
The `alt` property has been added to <img> elements.

Where appropriate, the `aria-labelledby` property has been added to SVGs.
This property accepts the ids of a `title` and `desc` elements
that contain the title content and description content
for the element that has the `aria-labelledby` property.

If it is anticipated that the SVG will be used more than once on the page,
then the `aria-labelledby` is not used, as this property depends on using an
id property and ids must be unique for accessibility
(and it is also good HTML semantics)
An `aria-label` is used instead.

The contents of the SVGs have been tidied up:
- `id` properties have been removed
- the properties have been alphabetised
- <g> tags have been removed

The `aria-label` property has been added to the mobile nav close button.

--- a/web/app/themes/ppj/src/sass/components/mobile-nav.sass
+++ b/web/app/themes/ppj/src/sass/components/mobile-nav.sass
@@ -60,22 +60,23 @@ $mobileNavWidthPortrait: 48rem
       text-transform: uppercase
 
   &__close-button
+    height: $common-spacing
     margin-left: auto
     position: absolute
-    right: .8rem
+    right: 1.6rem
     top: 1.6rem
     z-index: 1
+    width: $common-spacing
 
-    &:before
-      content: ''
-      @include background-img('svg/close.svg')
-      background-color: $color-transparent
-      background-repeat: no-repeat
-      background-position: center center
-      background-size: contain
-      width: $common-spacing * 0.875
-      height: $common-spacing * 0.875
-      display: inline-block
+  &__close-button-text
+    display: none
+
+  &__close-button-image
+    left: 0
+    height: 100%
+    position: absolute
+    top: 0
+    width: 100%
 
   &__menu
     $m: &
