Making screen overlay more generic/reusable

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -150,6 +150,10 @@ hr
     @include bp('portrait')
       top: 3.2rem
 
+.site-overlay-is-active
+  height: 100vh
+  overflow: hidden
+
 .page-container
   display: flex
   flex-direction: column
