--- a/web/app/themes/ppj/src/sass/components/screen-overlay.sass
+++ b/web/app/themes/ppj/src/sass/components/screen-overlay.sass
@@ -17,5 +17,11 @@
     transition: opacity $main-transition-duration ease
     z-index: 4
 
-  &__message
-    color: $color-white
+  &--loading-job-site
+    .screen-overlay__content
+      color: $color-white
+
+.screen-overlay--active.screen-overlay--user-feedback-survey
+  .screen-overlay__close-button
+    opacity: 1
+
