Adding a Job Alert Message (JAM) to find-a-job page
For a period of two weeks (but perhaps longer) there will be a significantly reduced number of jobs on the site.
During this time, we would like to capture the email addresses of users that end up on the find-a-job page
so that we can notify them in the future when more jobs are available.

The JAM will only display for a given leg's find-a-job page, if the JAM has been activated in the backend
using the relevant check box AND the 'Job alert activate date' is in the past.

If the above conditions are met and the 'Job alert deactivate date' is not set,
then the JAM will display indefinitely.
However if the 'Job alert deactivate date' is in the past, then the JAM will not be displayed,
regardless of the above settings.

The text of the JAM can be specified by the relevant WYSIWIG field on the 'find-a-job' page settings.

--- a/web/app/themes/ppj/src/sass/colors.sass
+++ b/web/app/themes/ppj/src/sass/colors.sass
@@ -1,3 +1,11 @@
+$color-1: rgb(0,153,204)
+$color-2: rgb(160,0,102)
+$color-3: rgb(0,166,133)
+$color-4: rgb(77,66,223)
+$color-5: rgb(231,59,41)
+$color-6: rgb(0,166,147)
+$color-7: rgb(251,100,0)
+
 $color-dark-transparent: rgba(0,0,0,0.85)
 $color-medium-transparent: rgba(0,0,0,0.3)
 $color-white: #fff
@@ -24,11 +32,4 @@ $color-gradient-light: $color-dark-section
 
 $color-notification: lightyellow
 $color-warning: #fee
-
-$color-1: rgb(0,153,204)
-$color-2: rgb(160,0,102)
-$color-3: rgb(0,166,133)
-$color-4: rgb(77,66,223)
-$color-5: rgb(231,59,41)
-$color-6: rgb(0,166,147)
-$color-7: rgb(251,100,0)
+$color-job-alert: $color-8
