--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -403,6 +403,26 @@
     .youth-custody &
       display: block
 
+  &__job-alert
+    color: $color-job-alert
+    border: .4rem solid $color-job-alert
+    border-radius: 2rem
+    line-height: 1.5
+    margin-bottom: 2rem
+    margin-top: .8rem
+    padding: 4rem
+    text-align: left
+
+    p
+      margin-top: 1rem
+      margin-bottom: 0
+
+      &:first-child
+        margin-top: 0
+
+    a
+      color: $color-job-alert
+
   &__map
     display: flex
     height: 24rem
