Tweaking style of Job Alert Message

--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -405,12 +405,11 @@
 
   &__job-alert
     color: $color-job-alert
-    border: .4rem solid $color-job-alert
+    border: .6rem solid $color-job-alert
     border-radius: 2rem
     line-height: 1.5
-    margin-bottom: 2rem
-    margin-top: .8rem
-    padding: 4rem
+    margin: 3rem 1.6rem 2rem
+    padding: 3rem 4rem
     text-align: left
 
     p
