Populate jobListMessage by WYSIWIG field
Commented out functionality to add search terms to job list message link.
The job list message is now populated by a WYSIWYG field
and so is not guaranteed to be a link.

A more sophisticated solution will be needed to ensure that any links to other
find a job pages will have the correct search terms applied.

--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -397,8 +397,10 @@
     display: none
     font-weight: 700
     padding: $common-spacing * 1.5
-    text-align: center
-    text-decoration: underline
+    text-align: left
+
+    *:last-child
+      margin-bottom: 0
 
     .youth-custody &
       display: block
