Fix IE11 height:auto bug on new apprentice page

--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -167,6 +167,7 @@
         height: auto
         object-fit: unset
         width: 100%
+        max-height: 550px
 
     & > *
       margin-bottom: $common-spacing
