--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -91,6 +91,14 @@
   @include bp('large')
     width: 79.2rem
 
+  img
+    &.max-height-550
+      max-height: 550px
+    &.max-height-580
+      max-height: 580px
+    &.max-height-600
+      max-height: 600px
+
   &__title
     @extend .common-header
     font-size: 2.2rem
@@ -270,6 +278,7 @@
       @include bp('portrait')
         padding: $common-spacing * 2
         width: 70%
+
 
   &__multi-text-block-container
     $ttbc: &
