Accessibility fixes redone due to Docker failure

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -179,6 +179,20 @@ hr
       transition: opacity $main-transition-duration ease
       z-index: 4
 
+   #skip-link
+        position: absolute
+        top: 0
+        right: 100%
+
+    #skip-link:focus
+        right: auto
+        color: black
+        background: white
+        font-size: 0.6em
+        font-weight: 500
+        padding: 9px
+        top: 15px
+
 .page-blocks
 
 .footer
