more accessibility fixes

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -179,19 +179,14 @@ hr
       transition: opacity $main-transition-duration ease
       z-index: 4
 
-    #skip-link
-        position: absolute
-        top: 0
-        right: 100%
+#skip-link
+    opacity: 0
 
-    #skip-link:focus
-        right: auto
-        color: black
-        background: white
-        font-size: 0.6em
-        font-weight: 500
-        padding: 9px
-        top: 15px
+#skip-link:focus
+    color: white
+    background: blank
+    font-size: .7em
+    opacity: 1
 
 .page-blocks
 
