Add organizational awards to footer

--- a/web/app/themes/ppj/src/sass/components/footer.sass
+++ b/web/app/themes/ppj/src/sass/components/footer.sass
@@ -112,3 +112,12 @@
 
       &__logo
         display: none
+
+.awards
+  display: flex
+  flex-wrap: wrap
+  justify-content: center
+  padding: 1em
+
+  .award
+    margin: 1em
