Rework Alert box for new Covid Message

--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -33,6 +33,13 @@
     position: absolute
     text-align: center
 
+  &.jobs-closed
+
+    .find-a-job__jobs
+      @include bp('portrait')
+      top: 2rem
+
+
   &--job-selected
     .job-summary
       background-color: $color-extremely-light
