Pull in cookie banner and modify theme to accept it
This pulls in the cookie banner. It also makes some changes to the base theme to allow it to work properly. These will want to come out at a later date, when we've made the cookie banner independent of base theme settings, and encapsulate the CSS in it. I'll put a note about this on a Trello card. But for now, this gets it onto the PPJ site for our WCAG audit next week.

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -50,12 +50,14 @@ img
 html
   font-family: $sans-serif
   font-variant-ligatures: none
+  height: unset !important
 
 h1,h2,h3,h4,h5,h6,strong
   font-weight: $font-weight-semi-bold
 
 html
-  font-size: 62.5% // 1 rem now equals 10px
+  font-size: 62.5%  !important // 1 rem now equals 10px
+  // The !important is a temporary work-around to stop the cookie banner from breaking this. The cookie banner will be refactored so that it's CSS is better encapsulated in the future.
 
 body
   font-size: $font-size-medium
