Addin comment explaining temporary workaround and removes rogue id

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -50,7 +50,7 @@ img
 html
   font-family: $sans-serif
   font-variant-ligatures: none
-  height: unset !important
+  height: unset !important // temporary cookie workaround
 
 h1,h2,h3,h4,h5,h6,strong
   font-weight: $font-weight-semi-bold
