Amend Salary Width for ranges

--- a/web/app/themes/ppj/src/sass/components/job-summary.sass
+++ b/web/app/themes/ppj/src/sass/components/job-summary.sass
@@ -1,6 +1,6 @@
 .job-summary
   $verticalPadding: $common-spacing / 2
-  $salaryWidth: 8.5rem
+  $salaryWidth: 14rem
 
   background-color: inherit
   font-size: $font-size-small
@@ -62,7 +62,7 @@
     background-color: inherit
     font-weight: $font-weight-bold
     margin-left: auto
-    padding-left: $common-spacing
+    padding-left: 1rem
     text-align: right
     width: $salaryWidth
 
