Add styles for lists inside accordion content

--- a/web/app/themes/ppj/src/sass/components/accordion.sass
+++ b/web/app/themes/ppj/src/sass/components/accordion.sass
@@ -112,3 +112,12 @@
 
       td:first-child, th:first-child
         padding-left: 0
+
+    & > ul, & > ol
+      padding: 0 3.2rem
+
+    & > ol li
+      list-style-type: decimal
+
+    & > ul li
+      list-style-type: disc
